syntax = "proto3";


package indexify_raft;


message RaftRequest {
    string data = 1;
}

message RaftReply {
    string data = 1;
    string error = 2;
}

message GetClusterMembershipRequest {
  uint64 node_id = 1;
  string address = 2;
}

message ForwardableRequest {
    oneof request {
        GetClusterMembershipRequest getClusterMembershipRequest = 1;
    }
}

message ForwardableResponse {
    oneof response {
        ClusterMembershipResponse clusterMembershipResponse = 1;
    }
}

message ClusterMembershipResponse {}

service RaftApi { 
    rpc Forward(RaftRequest) returns (RaftReply);
    rpc AppendEntries(RaftRequest) returns (RaftReply);
    rpc InstallSnapshot(RaftRequest) returns (RaftReply);
    rpc Vote(RaftRequest) returns (RaftReply);
    rpc GetClusterMembership(GetClusterMembershipRequest) returns (ClusterMembershipResponse);
    rpc HandleForwardableRequest(ForwardableRequest) returns (ForwardableResponse);
}

